Unit tests of the base entities and classes in the Repository layer.