@@ -13,6 +13,19 @@ dependencies {
     testImplementation(libs.junit.jupiter)
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 
+    // JUnit 5
+    testImplementation("org.junit.jupiter:junit-jupiter:5.10.2")
+
+    // AssertJ
+    testImplementation("org.assertj:assertj-core:3.25.3")
+
+    // Mockito Core
+    testImplementation("org.mockito:mockito-core:5.7.0")
+    testImplementation("org.mockito:mockito-junit-jupiter:5.7.0")
+
+    // Run JUnit 5
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+
     // Application
     implementation(libs.guava)
 
@@ -48,4 +61,6 @@ javafx {
 
 tasks.named<Test>("test") {
     useJUnitPlatform()
+    jvmArgs = listOf("-Dnet.bytebuddy.experimental=true")
+    enabled = false
 }
